# libcamera-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: camera.rs  camera_configuration.rs  camera_manager.rs  control.rs  control_info.rs  control_info_map.rs  control_list.rs  control_value.rs  controls.rs  ffi.cc  ffi.h  ffi.rs  frame_buffer.rs  frame_buffer_allocator.rs  lib.rs  main.rs  pixel_format.rs  request.rs  stream_configuration.rs  stream_formats.rs  wrappers.cc  wrappers.h
