[package]
name = "libcamera"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/dennisss/libcamera-rs"
description = "Safe Rust bindings for libcamera"
license = "Apache-2.0"

[dependencies]
cxx = "1.0"
nix = { version = "0.26.2", features = ["mman"] }

[build-dependencies]
cxx-build = "1.0"
